<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <!-- TextView for Password Prompt -->
    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Type your Password:"
        android:layout_centerHorizontal="true"
        android:textSize="18sp" />


    <!-- EditText for Password Input -->
    <EditText
        android:id="@+id/editview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview"
        android:layout_marginTop="32dp"
        android:hint="Enter password"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true" />


    <!-- Login Button -->
    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:layout_below="@id/editview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />


</RelativeLayout>
